--- a/customer/package.json
+++ b/customer/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^5.22.7",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "customer": "file:",
+    "i18next": "^24.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
