--- a/customer/package.json
+++ b/customer/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^5.22.7",
+    "@ant-design/icons": "^5.6.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.4.2",
+    "@mui/styles": "^6.4.2",
+    "@shadcn/ui": "^0.0.4",
+    "antd": "^5.23.3",
     "axios": "^1.7.9",
-    "cra-template": "1.2.0",
     "customer": "file:",
+    "express": "^4.21.2",
+    "framer-motion": "^12.0.6",
     "i18next": "^24.2.2",
+    "lucide-react": "^0.474.0",
+    "mysql2": "^3.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
-    "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
+    "react-material-ui-carousel": "^3.4.2",
+    "react-router-dom": "^7.1.5"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
@@ -40,6 +50,15 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "vite": "^6.0.5"
   }
 }
