--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,12 +71,13 @@
 			<artifactId>log4j-api</artifactId>
 		</dependency>
 
-		<!-- bcrypt -->
+		<!-- Java Simple Encrytion -->
 		<dependency>
-			<groupId>org.mindrot</groupId>
-			<artifactId>jbcrypt</artifactId>
-			<version>0.4</version>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.3</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
