--- a/customer/package.json
+++ b/customer/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-material-ui-carousel": "^3.4.2",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
