Adjust the customer menu screen UI to prepare for custom features

--- a/customer/package.json
+++ b/customer/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "customer",
+  "name": "ive-fyp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.6.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/material": "^6.4.2",
-    "@mui/styles": "^6.4.2",
-    "@shadcn/ui": "^0.0.4",
-    "antd": "^5.23.3",
+    "@ant-design/icons": "^5.5.2",
+    "antd": "^5.22.7",
     "axios": "^1.7.9",
-    "customer": "file:",
-    "express": "^4.21.2",
-    "framer-motion": "^12.0.6",
+    "body-parser": "^1.20.3",
+    "cra-template": "1.2.0",
     "i18next": "^24.2.2",
-    "lucide-react": "^0.474.0",
-    "mysql2": "^3.12.0",
+    "ive-fyp": "file:",
+    "rc-checkbox": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.4.0",
-    "react-material-ui-carousel": "^3.4.2",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "^5.0.1"
+    "react-i18next": "^15.4.1",
+    "react-intl-universal": "^2.12.0",
+    "react-lazyload": "^3.2.1",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
@@ -49,17 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "vite": "^6.0.5"
   }
 }
